--- a/event.html
+++ b/event.html
@@ -19,7 +19,15 @@
       <a class="button" href="index.html">☣ Accueil</a>
       <a class="button" href="guide.html">🎓 Guide</a>
       <a class="button" href="lore.html">📚 Lore</a>
-      <a class="button" href="mises-a-jour.html">📰 GATES News</a>
+      
+      <div class="dropdown">
+        <a class="button">📰 GATES News</a>
+        <div class="dropdown-content">
+          <a href="event.html">🎉 Event</a>
+          <a href="mises-a-jour.html">✨ Mises à jour du serveur</a>
+        </div>
+      </div>   
+      
       <a class="button" href="reglement.html">⚖️ Règlement</a>
 
       <div class="dropdown">
@@ -42,7 +50,7 @@
       <a class="button" href="discord.html">💬 Discord RP</a>
     </nav>
   </header>
-  <h1>📰 Event du serveur</h1>
+  <h1>🎉 Event du serveur</h1>
 
 </body>
 </html>
