--- a/mises-a-jour.html
+++ b/mises-a-jour.html
@@ -50,7 +50,7 @@
       <a class="button" href="discord.html">💬 Discord RP</a>
     </nav>
   </header>
-  <h1>📰 Mises à jour du serveur</h1>
+  <h1>✨ Mises à jour du serveur</h1>
 
 </body>
 </html>
