--- a/mises-a-jour.html
+++ b/mises-a-jour.html
@@ -9,6 +9,31 @@
   <link rel="icon" href="logo.png" type="image/png">
   <link rel="stylesheet" href="assets/css/theme.css">
   <title>Mises à jour - Serveur GMod</title>
+ <style>
+    .update-container {
+      margin-top: 40px;
+    }
+
+    .update-block {
+      background-color: #111;
+      border-left: 4px solid #00ffff;
+      margin-bottom: 20px;
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    .update-date {
+      font-weight: bold;
+      font-size: 1.2em;
+      color: #00ffff;
+      margin-bottom: 10px;
+    }
+
+    .update-text {
+      color: #ddd;
+      line-height: 1.6;
+    }
+</style>
 </head>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/style_menu.css" />
@@ -52,5 +77,14 @@
   </header>
   <h1>✨ Mises à jour du serveur</h1>
 
+  <div class="update-container">
+    <div class="update-block">
+      <div class="update-date">26/06/2025</div>
+      <div class="update-text">
+        Création du site web <strong>Gates Zone-74</strong> avec pages d'accueil, lore, guide, règlement, rôles, et plus encore.
+      </div>
+    </div>
+  </div>
+  
 </body>
 </html>
