--- a/mises-a-jour.html
+++ b/mises-a-jour.html
@@ -79,9 +79,13 @@
 
   <div class="update-container">
     <div class="update-block">
-      <div class="update-date">26/06/2025</div>
+      <div class="update-date">27/06/2025</div>
       <div class="update-text">
-        Création du site web <strong>Gates Zone-74</strong> avec pages d'accueil, lore, guide, règlement, rôles, et plus encore.
+        <ul>
+          <li>Création du site web <strong>Gates Zone-74</strong> avec pages d'accueil, lore, guide, règlement, rôles, et plus encore.</li>
+          <li>CCréation du serveur <strong>Discord RP</strong> avec canaux vocaux, salons RP, bots utilitaires, et salons d’annonces.</li>
+          <li>Lancement du serveur <strong>Garry's Mod SCP-RP</strong> avec système de rôles et premières règles de jeu.</li>
+        </ul>
       </div>
     </div>
   </div>
