--- a/mises-a-jour.html
+++ b/mises-a-jour.html
@@ -84,7 +84,7 @@
         <ul>
           <li>Création du site web <strong>Gates Zone-74</strong> avec pages d'accueil, lore, guide, règlement, rôles, et plus encore.</li>
           <li>Création du serveur <strong>Discord RP</strong> avec canaux vocaux, salons RP, bots utilitaires, et salons d’annonces.</li>
-          <li>Lancement du serveur <strong>Garry's Mod SCP-RP</strong> avec système de rôles et premières règles de jeu.</li>
+          <li>Lancement du serveur <strong>Garry's Mod SCP-RP "Gates Zone-74</strong> avec système de rôles et premières règles de jeu.</li>
         </ul>
       </div>
     </div>
