--- a/guide.html
+++ b/guide.html
@@ -6,7 +6,7 @@
   <meta property="og:image" content="logo.png" />
   <meta property="og:title" content="Bienvenue sur Gates Zone-74" />
   <meta property="og:description" content="Serveur SCP-RP Gates Zone-74 - Découvrez les départements, le règlement et plus encore." />
-  <link rel="icon" href="logo.png" type="image/png">
+  <link rel="icon" href="logo2.png" type="image/png">
   <link rel="stylesheet" href="assets/css/theme.css">
   <title>Guide du nouveau joueur – Serveur GMod SCP‑RP</title>
   <link rel="stylesheet" href="assets/css/style.css" />
