--- a/departement_scientifique.html
+++ b/departement_scientifique.html
@@ -5,7 +5,7 @@
     <meta property="og:image" content="logo.png" />
     <meta property="og:title" content="Bienvenue sur Gates Zone-74" />
     <meta property="og:description" content="Serveur SCP-RP Gates Zone-74 - Découvrez les départements, le règlement et plus encore." />
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="icon" href="logo2.png" type="image/png">
     <link rel="stylesheet" href="assets/css/theme.css">
     <title>Département Scientifique et de Recherche</title>
     <style>
