--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" href="logo2.png" content="https://rashless56.github.io/site-gmod/logo2_1200x630.png" />
+  <meta property="og:image" href="logo2_1200x1200.png" content="https://rashless56.github.io/site-gmod/logo2_1200x630.png" />
   <meta property="og:title" content="Bienvenue sur Gates Zone-74" />
   <meta property="og:description" content="Serveur SCP-RP Gates Zone-74 - Découvrez les départements, le règlement et plus encore." />
   <link rel="icon" href="logo2.png" type="image/png">
