--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <!-- Contenu principal -->
   <div class="main-content">
     <img src="logo2.png" alt="Logo Serveur" class="logo" />
-    <h1>⚠️ Bienvenue dans la Zone - 74 ⚠️</h1>
+    <h1>⚠️ Bienvenue sur Gates - SCP RP ⚠️</h1>
     <p>Rejoignez une nouvelle communauté active et amusante sur Garry's Mod - SCP RP.</p>
     
     <!-- Section Steam -->
