--- a/classe_d.html
+++ b/classe_d.html
@@ -6,7 +6,7 @@
 <meta property="og:image" href="logo2_1200x630.png" content="https://rashless56.github.io/site-gmod/logo2_1200x630.png" />
 <meta property="og:title" content="Bienvenue sur Gates Zone-74" />
 <meta property="og:description" content="Serveur SCP-RP Gates Zone-74 - Découvrez les départements, le règlement et plus encore." />
-<link rel="icon" href="logo2.png" type="image/png">
+<link rel="icon" href="gates_transp.png" type="image/png">
 <link rel="stylesheet" href="assets/css/theme.css">
 <title>Règlement personnel - Classe-D</title>
 <style>
